app/src/main/java/com/example/dudu/data/remote/errors/BackendError.kt
package com.example.dudu.data.remote.errors

class BackendError(
    code: Int,
    message: String
) : Exception()